revert chaos pre-remix
Former-commit-id: fe3735bd2d65ff5ffc28eff044bb15b3a93d63f6

--- a/data/maps/chaos.cfg
+++ b/data/maps/chaos.cfg
@@ -4,24 +4,24 @@
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 1
 // aircurb 25.0
-// ambient 0x111111
+// ambient 0x000000
 // blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 0.5
+// cloudblend 1.0
 // cloudbox "acord/clouds"
-// cloudclip 0.5
+// cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.0
 // cloudglare 0
-// cloudheight -0.1
+// cloudheight 0.025
 // cloudlayer "acord/cloudlayer"
-// cloudlayerblend 0.5
-// cloudlayercolour 0x999999
+// cloudlayerblend 1.0
+// cloudlayercolour 0xFFAAAA
 // cloudlayerglare 0
-// cloudscale 2.0
+// cloudscale 1.0
 // cloudscrollx 0.01
 // cloudscrolly 0.005
 // cloudsubdiv 16
@@ -49,7 +49,7 @@
 // lightcompress 3
 // lighterror 8
 // lightlod 0
-// lightprecision 92
+// lightprecision 224
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
@@ -59,33 +59,33 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 10
-// obitdeath "fell to their death"
+// numplayers 12
+// obitdeath ""
 // obitwater ""
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // skybgcolour 0x000000
 // skybgglare 0
-// skyblend 0.95
-// skybox "skyboxes/stars"
+// skyblend 1.0
+// skybox "acord/sky2"
 // skycolour 0xFFFFFF
 // skyglare 1
-// skylight 0x222222
+// skylight 0x999999
 // skytexture 1
 // slopez 0.5
 // spincloudlayer 0.0
-// spinclouds 0.1
+// spinclouds 0.0
 // spinsky 0.0
 // stairheight 4.1
 // stepspeed 1.0
 // vertwater 1
 // wallz 0.2
-// watercolour 0x101020
+// watercolour 0x103060
 // waterfallcolour 0x000000
-// waterfog 125
+// waterfog 150
 // waterlod 1
-// waterspec 200
+// waterspec 25
 // watersubdiv 3
 // yawcloudlayer 0
 // yawclouds 0
@@ -498,7 +498,7 @@ texture s "acord/lowspec.jpg"
 texture z "acord/pwall1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/pwall1.jpg" 1 0 0 0.250000 // 68
+texture c "acord/pwall1.jpg" 1 0 0 0.500000 // 68
 texture n "acord/pwall1n.jpg"
 texture s "acord/lowspec.jpg"
 texture z "acord/pwall1z.jpg"
@@ -732,7 +732,7 @@ texture s "acord/lowspec.jpg"
 texture z "acord/wall16z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/ground5.jpg" 0 0 0 0.500000 // 107
+texture c "acord/ground5.jpg" 0 0 0 1.000000 // 107
 texture n "acord/ground5n.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/ground5z.jpg"
@@ -870,11 +870,10 @@ texture s "acord/nospec.jpg"
 texture z "acord/grassz.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.55/0.5/0.5>acord/concrete2.jpg" 0 0 0 0.500000 // 130
+texture c "acord/concrete2.jpg" 0 0 0 0.500000 // 130
 texture n "acord/concrete2n.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/concrete2z.jpg"
-texlayer 9
 
 setshader bumpspecmapparallaxworld
 texture c "acord/concrete2.jpg" 1 0 0 0.500000 // 131
@@ -1096,7 +1095,7 @@ texture s "acord/nospec.jpg"
 texture z "acord/metal_door3z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.5/0.5/0.5>acord/metal_door3.jpg" 1 0 0 0.500000 // 167
+texture c "acord/metal_door3.jpg" 1 0 0 0.500000 // 167
 texture n "acord/metal_door3n.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/metal_door3z.jpg"
@@ -1733,7 +1732,7 @@ setshader stdworld
 texture c "acord/brick1.jpg" 0 0 0 1.000000 // 272
 
 setshader stdworld
-texture c "acord/corrugated.jpg" 0 0 0 0.500000 // 273
+texture c "acord/corrugated.jpg" 0 0 0 1.000000 // 273
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
@@ -1809,16 +1808,15 @@ texture s "mitaman/mm-doorsindustrial69_spec.jpg"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
-texture c "mitaman/mm-iron02.jpg" 0 0 0 0.500000 // 286
+texture c "mitaman/mm-iron02.jpg" 0 0 0 1.000000 // 286
 texture n "mitaman/mm-iron02_normal.jpg"
 texture s "mitaman/mm-iron02_spec.jpg"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
-texture c "mitaman/mm-plast07.jpg" 0 0 0 0.500000 // 287
+texture c "mitaman/mm-plast07.jpg" 0 0 0 1.000000 // 287
 texture n "mitaman/mm-plast07_normal.jpg"
 texture s "mitaman/mm-plast07_spec.jpg"
-texlayer 9
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
@@ -1840,7 +1838,7 @@ texture s "mitaman/mm-concreteworn51_spec.jpg"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
-texture c "mitaman/mm-rust07.jpg" 0 0 0 0.500000 // 291
+texture c "mitaman/mm-rust07.jpg" 0 0 0 0.660000 // 291
 texture n "mitaman/mm-rust07_normal.jpg"
 texture s "mitaman/mm-rust07_spec.jpg"
 
