spawngrenades variable (0..2 [default: 0]); spawn with grenades - 0 = never, 1 = all but instagib, 2 = always
Former-commit-id: f440655b8902e92f6dcfbb59e780ea28acfdbc96

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -404,6 +404,7 @@ newgui game [
 					vardef stfoccupy		"stf occupy"
 					vardef spawnweapon		"spawn weapon"
 					vardef instaspawnweapon	"insta spawn weapon"
+					vardef spawngrenades	"spawn grenades"
 				]
 				guistrut 1
 				guilist [
@@ -439,6 +440,7 @@ newgui game [
 						guilist [ varfld instaspawnweapon 11 ]
 						guitext (format "^fa%2" (at $wepnames $instaspawnweapon))
 					]
+					varfld spawngrenades 16
 				]
 			]
 		]
