redirect alternate domains to www.*
Former-commit-id: 65303bbbab636ccb2191a0330253487dd5462e98

--- a/src/site/.htaccess
+++ b/src/site/.htaccess
@@ -1,6 +1,11 @@
 RewriteEngine On
 Options +FollowSymLinks -Multiviews
 
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^bloodfrontier.sourceforge.net$ [OR,NC]
+RewriteCond %{HTTP_HOST} ^bloodfrontier.com$
+RewriteRule ^(.*)$ http://www.bloodfrontier.com/$1 [R=301,L,NC]
+
 RewriteRule ^download/default$ /bits/index.php?target=download&title=13226 [QSA,L,NC]
 RewriteRule ^download/windows$ /bits/index.php?target=download&title=13227 [QSA,L,NC]
 RewriteRule ^download/linux$ /bits/index.php?target=download&title=13228 [QSA,L,NC]
