increase fullbrightmodels slightly and texmad alpha team model skin
Former-commit-id: 65bb3685efff8267c5c32593809235bb7765a886

--- a/data/models/actors/player/alpha/md5.cfg
+++ b/data/models/actors/player/alpha/md5.cfg
@@ -9,7 +9,7 @@ md5tag R_Foot tag_rfoot
 md5tag Abdomen tag_torso
 md5tag Head tag_head
 
-md5skin mesh "<dds>skin.png" "<dds>../mask.png"
+md5skin mesh "<mad:1.5/1.5/2><dds>skin.png" "<dds>../mask.png"
 md5bumpmap mesh "<dds>../normals.png"
 
 md5anim "idle" "../idle.md5anim" 1
