--- a/data/models/actors/player/alpha/vwep/md5.cfg
+++ b/data/models/actors/player/alpha/vwep/md5.cfg
@@ -2,7 +2,7 @@ md5load "../../trooper_hands.md5mesh" firstplayer
 
 md5tag Weapon tag_weapon
 
-md5skin mesh "<compress:2>../skin.png" "<compress:2>../../mask.png"
+md5skin mesh "<mad:1.5/1.5/2><compress:2>../skin.png" "<compress:2>../../mask.png"
 md5bumpmap mesh "<compress:2>../../normals.png"
 
 md5pitch "" 1
