ramps instead of stairs in eight, ui alignment fixes, changes to ai auto-population with new variable botbalance (0..2 [default: 1]); 0 = turn off bots, 1 = fill only with enough bots to satisfy play, 2 = populate bots to numplayers
Former-commit-id: 2e06ce1b2465c9ad1592277dcf0254f44dd80e82

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -237,7 +237,7 @@ displayvote = [
 newgui vote [ displayvote ]
 
 maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps racemaps racemaps ]
-maplistsize = 22 //adjust if desired
+maplistsize = 24 //adjust if desired
 mapindex = 0
 maplist = ""
 mappath = ""
@@ -323,12 +323,14 @@ newgui game [
 			guistrut 1
 			guilist [
 				guilist [
+					vardef botbalance		"bot balancing"
 					vardef botscale			"scale num bots"
 					vardef botminskill		"bot min skill level"
 					vardef botmaxskill		"bot max skill level"
 				]
 				guistrut 1
 				guilist [
+					varfld botbalance 12
 					varfld botscale 12
 					varfld botminskill 12
 					varfld botmaxskill 12
@@ -404,7 +406,6 @@ newgui game [
 					vardef stfoccupy		"stf occupy"
 					vardef spawnweapon		"spawn weapon"
 					vardef instaspawnweapon	"insta spawn weapon"
-					vardef spawngrenades	"spawn grenades"
 				]
 				guistrut 1
 				guilist [
@@ -440,7 +441,6 @@ newgui game [
 						guilist [ varfld instaspawnweapon 11 ]
 						guitext (format "^fa%2" (at $wepnames $instaspawnweapon))
 					]
-					varfld spawngrenades 16
 				]
 			]
 		]
@@ -448,6 +448,7 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
+					vardef spawngrenades	"spawn grenades"
 					vardef maprotate		"map rotation"
 					vardef spawnrotate		"spawn rotation"
 					vardef damagescale		"damage scale"
@@ -474,6 +475,7 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
+					varfld spawngrenades 16
 					varfld maprotate 16
 					varfld spawnrotate 16
 					varfld damagescale 16
