abstract the mv command
Former-commit-id: 059ae6fcd8a2ab317f47d73fdb59e394e2b68839

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,8 @@ ifeq (,$(findstring -pg,$(CXXFLAGS)))
 endif
 endif
 
+MV=mv
+
 ifneq (,$(findstring MINGW,$(PLATFORM)))
 WINDRES= windres
 CLIENT_INCLUDES= -DINTERFACE -DIRC $(INCLUDES) -Iinclude
@@ -119,7 +121,7 @@ clean-server:
 
 %.h.gch: %.h
 	$(CXX) $(CXXFLAGS) -o $@.tmp $(subst .h.gch,.h,$@)
-	mv $@.tmp $@
+	$(MV) $@.tmp $@
 
 %-standalone.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $(subst -standalone.o,.cpp,$@)
