swap out gravityscale/jumpscale in favour of fixed values forcegravity/forcejumpspeed/forceimpulsespeed
Former-commit-id: bd8da31aebd86953d55e8bf771fa92c565abf2b5

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -380,32 +380,32 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					vardef selfdamage		"self damage"
-					vardef teamdamage		"team damage"
-					vardef maxhealth		"max health"
-					vardef extrahealth		"extra health"
-					vardef maxcarry			"max carry weaps"
-					vardef vampire			"vampire"
-					vardef regenguard		"regen guard"
-					vardef regenhealth		"regen health"
-					vardef regenextra		"regen extra"
-					vardef impulsemeter		"impulse meter"
-					vardef impulsecost		"impulse cost"
-					vardef impulsecount		"impulse count"
-					vardef impulseskate		"impulse skate"
-					vardef itemsallowed		"items allowed"
-					vardef itemdropping		"item dropping"
-					vardef kamikaze			"kamikaze"
-					vardef fraglimit		"frag limit"
-					vardef ctflimit			"ctf score limit"
-					vardef ctfstyle			"ctf score limit"
-					vardef ctfresetdelay	"ctf reset delay"
-					vardef stflimit			"stf score limit"
-					vardef stffinish		"stf all finish"
-					vardef stfpoints		"stf points"
-					vardef stfoccupy		"stf occupy"
-					vardef spawnweapon		"spawn weapon"
-					vardef instaspawnweapon	"insta spawn weapon"
+					vardef selfdamage			"self damage"
+					vardef teamdamage			"team damage"
+					vardef maxhealth			"max health"
+					vardef extrahealth			"extra health"
+					vardef maxcarry				"max carry weaps"
+					vardef vampire				"vampire"
+					vardef regenguard			"regen guard"
+					vardef regenhealth			"regen health"
+					vardef regenextra			"regen extra"
+					vardef impulsemeter			"impulse meter"
+					vardef impulsecost			"impulse cost"
+					vardef impulsecount			"impulse count"
+					vardef impulseskate			"impulse skate"
+					vardef itemsallowed			"items allowed"
+					vardef itemdropping			"item dropping"
+					vardef kamikaze				"kamikaze"
+					vardef fraglimit			"frag limit"
+					vardef ctflimit				"ctf score limit"
+					vardef ctfstyle				"ctf score limit"
+					vardef ctfresetdelay		"ctf reset delay"
+					vardef stflimit				"stf score limit"
+					vardef stffinish			"stf all finish"
+					vardef stfpoints			"stf points"
+					vardef stfoccupy			"stf occupy"
+					vardef spawnweapon			"spawn weapon"
+					vardef instaspawnweapon		"insta spawn weapon"
 				]
 				guistrut 1
 				guilist [
@@ -448,39 +448,41 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					vardef spawngrenades	"spawn grenades"
-					vardef maprotate		"map rotation"
-					vardef spawnrotate		"spawn rotation"
-					vardef damagescale		"damage scale"
-					vardef gravityscale		"gravity scale"
-					vardef jumpscale		"jump scale"
-					vardef speedscale		"speed scale"
-					vardef hitpushscale		"hit push scale"
-					vardef deadpushscale	"dead push scale"
-					vardef wavepusharea		"wave push area"
-					vardef wavepushscale	"wave push scale"
-					vardef timelimit		"time limit"
-					vardef racelimit		"race limit"
-					vardef intermlimit		"intermission"
-					vardef votelimit		"vote limit"
-					vardef itemspawntime	"item spawn time"
-					vardef itemspawndelay	"item spawn delay"
-					vardef itemspawnstyle	"item spawn style"
-					vardef regendelay		"regen delay"
-					vardef regentime		"regen time"
-					vardef spawnprotecttime	"spawn protect"
-					vardef spawndelay		"spawn delay"
-					vardef instaspawndelay	"insta spawn delay"
-					vardef racespawndelay	"race spawn delay"
+					vardef spawngrenades		"spawn grenades"
+					vardef maprotate			"map rotation"
+					vardef spawnrotate			"spawn rotation"
+					vardef forcegravity			"force gravity"
+					vardef forcejumpspeed		"force jump speed"
+					vardef forceimpulsespeed	"force impulse speed"
+					vardef damagescale			"damage scale"
+					vardef speedscale			"speed scale"
+					vardef hitpushscale			"hit push scale"
+					vardef deadpushscale		"dead push scale"
+					vardef wavepusharea			"wave push area"
+					vardef wavepushscale		"wave push scale"
+					vardef timelimit			"time limit"
+					vardef racelimit			"race limit"
+					vardef intermlimit			"intermission"
+					vardef votelimit			"vote limit"
+					vardef itemspawntime		"item spawn time"
+					vardef itemspawndelay		"item spawn delay"
+					vardef itemspawnstyle		"item spawn style"
+					vardef regendelay			"regen delay"
+					vardef regentime			"regen time"
+					vardef spawnprotecttime		"spawn protect"
+					vardef spawndelay			"spawn delay"
+					vardef instaspawndelay		"insta spawn delay"
+					vardef racespawndelay		"race spawn delay"
 				]
 				guistrut 1
 				guilist [
 					varfld spawngrenades 16
 					varfld maprotate 16
 					varfld spawnrotate 16
+					varfld forcegravity 16
+					varfld forcejumpspeed 16
+					varfld forceimpulsespeed 16
 					varfld damagescale 16
-					varfld gravityscale 16
-					varfld jumpscale 16
 					varfld speedscale 16
 					varfld hitpushscale 16
 					varfld deadpushscale 16
