--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -971,14 +971,14 @@ newgui options [
     ]
     guilist [
         guicheckbox "^f3motion blur 	" motionblur
-//        if $motionblur [
-//            guibar
-//            guiradio "^f3subtle" motionblurscale 0.5
-//            guibar
-//            guiradio "^f3moderate" motionblurscale 0.65
-//            guibar
-//            guiradio "^f3intense" motionblurscale 0.8
-//        ]
+        if $motionblur [
+            guibar
+            guiradio "^f3subtle" motionblurscale 0.5
+            guibar
+            guiradio "^f3moderate" motionblurscale 1
+            guibar
+            guiradio "^f3intense" motionblurscale 2
+        ]
     ]
     guilist [
         guicheckbox "^f3grass			" grass
