fixed keys and mouse options menu
Former-commit-id: 9c3711b4cd2cbd5562d4200a69fa85f9824f1bc0

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -104,23 +104,23 @@ bind DOWN			[ backward ]
 bind RIGHT			[ right ]
 bind LEFT			[ left ]
 
-bind LSHIFT			[ action 5 ]
-bind LCTRL			[ action 6 ]
-bind SPACE			[ action 4 ]
+bind LSHIFT			[ action 5 ] // sprint
+bind LCTRL			[ action 6 ] // crouch
+bind SPACE			[ action 4 ] // jump
 
-bind MOUSE1			[ action 0 ]
-bind MOUSE2 		[ action 1 ]
-bind MOUSE3			[ action 2 ]
+bind MOUSE1			[ action 0 ] // attack
+bind MOUSE2 		[ action 1 ] // alt-attack
+bind MOUSE3			[ action 2 ] // reload
 
-bind E				[ action 3 ]
-bind R				[ action 2 ]
-bind F				[ action 7 ]
+bind E				[ action 3 ] // action
+bind R				[ action 2 ] // reload
+bind F				[ action 7 ] // impulse
 bind Z				[ drop ]
-bind X				[ action 5 ]
-bind C				[ action 6 ]
-bind V				[ action 1 ]
-bind G				[ weapon 6 ]
-bind Q				[ action 7 ]
+bind X				[ action 5 ] // sprint
+bind C				[ action 6 ] // crouch
+bind V				[ action 1 ] // alt-attack
+bind G				[ weapon 6 ] // grenades
+bind Q				[ action 7 ] // impulse
 bind K				[ kill ]
 
 bind TAB			[ showscores ]
@@ -163,14 +163,14 @@ editbind F7			[ showgui findent ]
 editbindvar F8		entselsnap
 editbind F9			[ changeoutline 1 ]
 
-bind 1				[ weapon 0 ]
-bind 2				[ weapon 1 ]
-bind 3				[ weapon 2 ]
-bind 4				[ weapon 3 ]
-bind 5				[ weapon 4 ]
-bind 6				[ weapon 5 ]
-bind 7				[ weapon 6 ]
-bind 8				[ weapon 7 ]
+bind 1				[ weapon 0 ] // pistol
+bind 2				[ weapon 1 ] // shotgun
+bind 3				[ weapon 2 ] // smg
+bind 4				[ weapon 3 ] // flamer
+bind 5				[ weapon 4 ] // plasma
+bind 6				[ weapon 5 ] // rifle
+bind 7				[ weapon 6 ] // grenade
+bind 8				[ weapon 7 ] // insta
 bindvar 9			thirdperson
 
 editbind 1 			[ domodifier 11 ]
