--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -1193,40 +1193,24 @@ newgui options [
     guitab  "mouse"
 	guilist [
 		guilist [
-			guicheckbox "invert mouse"      mouseinvert
+			guitext "mouse input style "
 			guitext "mouse overall sensitivity	"
 			guitext "mouse yaw sensitivity"
 			guitext "mouse pitch sensitivity"
+			guistrut 1
+			guicheckbox "invert y-axis" mouseinvert
 		]
 		guilist [
-			guicheckbox "absolute mouse"    mouseabsolute
+			guilist [
+				guiradio "default " mousetype 0
+				guiradio "panned " mousetype 1
+				guiradio "free " mousetype 1
+			]
 			guislider sensitivity 1 100
 			guislider yawsensitivity 0 100
 			guislider pitchsensitivity 1 100
-		]
-	]
-	guibar
-	guitext "mouse type"
-	guilist [
-		guilist [
-			guitext "fixed"
-			guiradio "default" mousetype 0
-			guiradio "zoom" zoommousetype 0
-			guiradio "prone" pronemousetype 0
-		]
-		guibar
-		guilist [
-			guitext "panned"
-			guiradio "default" mousetype 1
-			guiradio "zoom" zoommousetype 1
-			guiradio "prone" pronemousetype 1
-		]
-		guibar
-		guilist [
-			guitext "free"
-			guiradio "default" mousetype 2
-			guiradio "zoom" zoommousetype 2
-			guiradio "prone" pronemousetype 2
+			guistrut 1
+			guicheckbox "absolute movements" mouseabsolute
 		]
 	]
 
@@ -1236,22 +1220,31 @@ newgui options [
     guilistsplit n 2 $bindactions [
         newbinds = (concatword "newbinds" $i)
         guilist [
-            guitext (tabify [@@(concatword $n ": ")] 3)
+            guitext (tabify [@@(concatword (at $bindnames $i) " ")] 4)
             @newbinds = (searchbinds [@@n])
-            guikeyfield @newbinds -8 [
+            guikeyfield @newbinds -24 [
                 oldbinds = (searchbinds [@@@n])
                 loop i (listlen $oldbinds) [bind (at $oldbinds $i) ""]
                 loop i (listlen $@@newbinds) [bind (at $@@@newbinds $i) [@@@@n]]
             ]
         ]
-    ] [guibar]
+    ] [guistrut 2]
 
     //guitab "autoexec.cfg"
     //guitext "autoexec.cfg"
     //showfileeditor "autoexec.cfg" -60 15
 ]
 
-bindactions = [forward backward left right jump crouch attack zoom reload action saycommand "weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "universaldelta 1" "universaldelta -1" toggleedit]
+bindactions = [
+	forward backward left right saycommand toggleedit "universaldelta 1" "universaldelta -1"
+	"action 0" "action 1" "action 2" "action 3" "action 4" "action 5" "action 6" "action 7"
+	"weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "weapon 6"
+]
+bindnames = [
+	forward backward left right say edit "scroll up" "scroll down"
+	"attack" "alt-attack" "reload" "use" "jump" "sprint" "crouch" "impulse"
+	pistol shotgun smg flamer plasma grenade insta
+]
 
 entupdate = [ entset $tmpt $tmp0 $tmp1 $tmp2 $tmp3 ]
 
