add some other useful keys to the menu
Former-commit-id: c09cbc6f032670160600d441c3ecb1fc390ff0e9

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -131,7 +131,7 @@ sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "texture
 bind T				saytextcommand
 bind BACKQUOTE		"saycommand /"
 bind SLASH			"saycommand /"
-bind Y 				[ if (& (mutators) 0x0002) [ sayteamcommand ] [ saytextcommand ] ]
+bind Y 				sayteamcommand
 
 bind KP_MINUS		[ mastervol (max (- $mastervol 5) 0) ]
 bind KP_PLUS		[ mastervol (min (+ $mastervol 5) 255) ]
