--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -1215,8 +1215,9 @@ newgui options [
 	]
 
     guitab  "keys"
-    guitext "(basic keybinds, for anything more use the 'bind' command)"
+    guitext "basic keybinds, for anything more use the 'bind' command"
     guitext "select action to bind and press desired keys (ESC when done):"
+	guistrut 1
     guilistsplit n 2 $bindactions [
         newbinds = (concatword "newbinds" $i)
         guilist [
@@ -1236,14 +1237,18 @@ newgui options [
 ]
 
 bindactions = [
-	forward backward left right saycommand toggleedit "universaldelta 1" "universaldelta -1"
+	forward backward left right "universaldelta 1" "universaldelta -1" "spectator 1" "spectator 0"
 	"action 0" "action 1" "action 2" "action 3" "action 4" "action 5" "action 6" "action 7"
-	"weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "weapon 6"
+	drop "weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "weapon 6"
+	"saycommand /" saytextcommand sayteamcommand toggleconsole toggleedit inputgrab
+	addbot delbot "showgui game" "showgui vote" "setmaster 1" "showgui arena"
 ]
 bindnames = [
-	forward backward left right say edit "scroll up" "scroll down"
+	forward backward left right "scroll up" "scroll down" "enter spectator" "exit spectator"
 	"attack" "alt-attack" "reload" "use" "jump" "sprint" "crouch" "impulse"
-	pistol shotgun smg flamer plasma grenade insta
+	"drop weapon" pistol shotgun smg flamer plasma grenade insta
+	"cmd input" "all chat" "team chat" "toggle editing" "toggle console" "toggle input"
+	"add bot" "delete bot" "game menu" "vote menu" "claim master" "arena menu"
 ]
 
 entupdate = [ entset $tmpt $tmp0 $tmp1 $tmp2 $tmp3 ]
