--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -1240,7 +1240,7 @@ bindactions = [
 	forward backward left right "universaldelta 1" "universaldelta -1" "spectator 1" "spectator 0"
 	"action 0" "action 1" "action 2" "action 3" "action 4" "action 5" "action 6" "action 7"
 	drop "weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "weapon 6"
-	"saycommand /" saytextcommand sayteamcommand toggleconsole toggleedit inputgrab
+	"saycommand /" saytextcommand sayteamcommand toggleconsole toggleedit grabinput
 	addbot delbot "showgui game" "showgui vote" "setmaster 1" "showgui arena"
 ]
 bindnames = [
