--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -129,8 +129,8 @@ saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/conopen"]
 sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/" (getteamicon))]
 
 bind T				[ saytextcommand ]
-bind BACKQUOTE		[ "saycommand /" ]
-bind SLASH			[ "saycommand /" ]
+bind BACKQUOTE		"saycommand /"
+bind SLASH			"saycommand /"
 bind Y 				[ sayteamcommand ]
 
 bind KP_MINUS		[ mastervol (max (- $mastervol 5) 0) ]
