--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -337,6 +337,7 @@ playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
 
 // some aliases
 fov = [ if (= (isthirdperson) 1) [ thirdpersonfov $arg1 ] [ firstpersonfov $arg1 ] ] // people have complained /fov was removed
+coop = [ edit $arg1 ]
 
 // sauer rotation aliases
 alias octamaps [
