more physics cleanups
Former-commit-id: 1d22af69fc37a67ff0a47bc69a22be7053e27589

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -149,7 +149,7 @@ bind F1				[ toggleedit ]
 bind F2				[ showgui game ]
 bind F3				[ showgui vote ]
 bind F5				[ setmaster 1 ]
-bindvar F10			[ grabinput ]
+bindvar F10			grabinput
 bind F11			[ toggleconsole ]
 bind F12			[ screenshot "screenshot" ]
 
@@ -160,7 +160,7 @@ editbind F4			[ calclight 3 ]
 editbind F5			[ recalc ]
 editbind F6			[ savemap ]
 editbind F7			[ showgui findent ]
-editbindvar F8		[ entselsnap ]
+editbindvar F8		entselsnap
 editbind F9			[ changeoutline 1 ]
 
 bind 1				[ weapon 0 ] // pistol
@@ -171,7 +171,7 @@ bind 5				[ weapon 4 ] // plasma
 bind 6				[ weapon 5 ] // rifle
 bind 7				[ weapon 6 ] // grenade
 bind 8				[ weapon 7 ] // insta
-bindvar 9			[ thirdperson ]
+bindvar 9			thirdperson
 
 editbind 1 			[ domodifier 11 ]
 editbind 2 			[ domodifier 12 ]
@@ -182,8 +182,8 @@ editbind 6 			[ domodifier 16 ]
 editbind 7 			[ domodifier 17 ]
 editbind 8 			[ domodifier 18 ]
 editbind 9 			[ domodifier 19 ]
-editbindvar 0		[ allfaces ]
-editbindvar K		[ blankgeom ]
+editbindvar 0		allfaces
+editbindvar K		blankgeom
 editbind C			[ domodifier 9 ]
 
 editbind INSERT 	[ sendmap ]
