forcemovespeed server side override, retooled crawlspeed -> movecrawl modifier
Former-commit-id: 4180441d16ac780f49d465d479a84502aae9bc2f

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -353,13 +353,15 @@ newgui game [
 				]
 			] 
 			guilist [
+				mapscount = $maplistsize
+				if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
 				nummaps = (listlen $maplist)
-				mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
+				mapindex = (min (max 0 (- $nummaps $mapscount)) $mapindex) //safeguard
 				mapnum = (min $mapnum $nummaps)
 				guilist [
 					guilist [ guistrut 28 ]
 					loop i $nummaps [
-						if (&& (>= $i $mapindex) (< (- $i $mapindex) $maplistsize)) [
+						if (&& (>= $i $mapindex) (< (- $i $mapindex) $mapscount)) [
 							curmap = (at $maplist $i)
 							if (strcmp $curmap "?") [
 								guilist [
@@ -371,7 +373,16 @@ newgui game [
 						]
 					]
 				]
-				if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
+				if (< $mapscount $nummaps) [ guislider mapindex 0 (- $nummaps $mapscount) [] 1 ]
+			]
+			if (> $hasoctapaks 0) [
+				guistrut 1
+				guilist [ guistayopen [
+					guibutton "^fvshow maps from sauerbraten" [
+						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
+						showngamegui = 0
+					] (? (> $mapocta 0) "checkboxon" "checkbox")
+				] ]
 			]
 		]
 	]
@@ -406,6 +417,7 @@ newgui game [
 					vardef stfoccupy			"stf occupy"
 					vardef spawnweapon			"spawn weapon"
 					vardef instaspawnweapon		"insta spawn weapon"
+					vardef spawngrenades		"spawn grenades"
 				]
 				guistrut 1
 				guilist [
@@ -441,6 +453,7 @@ newgui game [
 						guilist [ varfld instaspawnweapon 11 ]
 						guitext (format "^fa%2" (at $wepnames $instaspawnweapon))
 					]
+					varfld spawngrenades 16
 				]
 			]
 		]
@@ -448,10 +461,11 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					vardef spawngrenades		"spawn grenades"
 					vardef maprotate			"map rotation"
 					vardef spawnrotate			"spawn rotation"
 					vardef forcegravity			"force gravity"
+					vardef forcemovespeed		"force move speed"
+					vardef forcemovecrawl		"force move crawl"
 					vardef forcejumpspeed		"force jump speed"
 					vardef forceimpulsespeed	"force impulse speed"
 					vardef damagescale			"damage scale"
@@ -476,10 +490,11 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					varfld spawngrenades 16
 					varfld maprotate 16
 					varfld spawnrotate 16
 					varfld forcegravity 16
+					varfld forcemovespeed 16
+					varfld forcemovecrawl 16
 					varfld forcejumpspeed 16
 					varfld forceimpulsespeed 16
 					varfld damagescale 16
@@ -503,15 +518,7 @@ newgui game [
 					varfld racespawndelay 16
 				]
 			]
-			guibutton "^foreset all game variables" [resetvars] "exit"
-			if (> $hasoctapaks 0) [
-				guilist [
-					guibutton "^fvshow maps from sauerbraten" [
-						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
-						showngamegui = 0
-					] (? (> $mapocta 0) "checkboxon" "checkbox")
-				]
-			]
+			guistayopen [ guibutton "^foreset all game variables" [resetvars] "exit" ]
 		]
 	]
 	if (> (getvote 0) 0) [
