skippistol default to 1, amped up SMG damage, slightly faster pistol projectile, reduced default extrahealth to 150, regenflag var (0..2, default: 1); 0 = off, 1 = only guarding, 2 = also while carrying
Former-commit-id: 971feeb30e4c9ed98886fa13cff462be5054e5d0

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -400,6 +400,7 @@ newgui game [
 					vardef regenguard			"regen guard"
 					vardef regenhealth			"regen health"
 					vardef regenextra			"regen extra"
+					vardef regenflag			"regen flag"
 					vardef impulsemeter			"impulse meter"
 					vardef impulsecost			"impulse cost"
 					vardef impulsecount			"impulse count"
@@ -430,6 +431,7 @@ newgui game [
 					varfld regenguard 16
 					varfld regenhealth 16
 					varfld regenextra 16
+					varfld regenflag 16
 					varfld impulsemeter 16
 					varfld impulsecost 16
 					varfld impulsecount 16
