fix grenade proj cfg
Former-commit-id: face94b1f35e22d83421407a149e56c9a85dd9ca

--- a/data/models/weapons/grenade/proj/md5.cfg
+++ b/data/models/weapons/grenade/proj/md5.cfg
@@ -1,6 +1,6 @@
-md5load ../../weapons/grenade/frag.md5mesh
-md5skin mesh ../../weapons/grenade/skin.jpg ../../weapons/grenade/mask.jpg
-md5bumpmap mesh ../../weapons/grenade/normal.jpg
+md5load ../frag.md5mesh
+md5skin mesh ../skin.jpg ../mask.jpg
+md5bumpmap mesh ../normal.jpg
 
 mdlambient 0
 mdlspec 100
