--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -37,7 +37,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 65.0
+gravity 60.0
 // impulsespeed 30.0
 // jumpspeed 50.0
 // ladderspeed 1.0
