--- a/data/maps/wet.cfg
+++ b/data/maps/wet.cfg
@@ -36,7 +36,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 80.0
+gravity 60.0
 // impulsemod 60.0
 // jumpspeed 50.0
 // ladderspeed 1.0
