--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -36,7 +36,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 70.0
+gravity 60.0
 // jumpspeed 40.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
