fixed bots not fucking off in ffa modes, tweaked duel announcements and allowed round-regen to put out fire, added waittv view modes (mostly for duel/survivor)
Former-commit-id: 1c714b6104963ddec63609d880d13fb64a5e1748

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -318,10 +318,11 @@ enttypeselect = [
 
 exec "menus.cfg" // keep this here, it uses some of the stuff above
 
-specbind LSHIFT		[ floatspeed 500; onrelease [ floatspeed 75 ] ]
+specbind LSHIFT		[ floatspeed 250; onrelease [ floatspeed 75 ] ]
 specbind MOUSE1		[ specmodeswitch ]
 specbind MOUSE2		[ spectator 0 ]
-waitbind LSHIFT		[ floatspeed 500; onrelease [ floatspeed 75 ] ]
+waitbind LSHIFT		[ floatspeed 250; onrelease [ floatspeed 75 ] ]
+waitbind MOUSE1		[ waitmodeswitch ]
 
 musicfiles = [
 	"loops/mitaman/blinkrage"
