renamed 'race' to 'time-trial', longer lasting fire-burning and slightly increased flamer damage
Former-commit-id: c5af71bcc5ca6e1bde5b4b6a320244b6da6319c2

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -236,7 +236,7 @@ displayvote = [
 ]
 newgui vote [ displayvote ]
 
-maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps racemaps racemaps ]
+maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
 maplistsize = 24 //adjust if desired
 mapindex = 0
 maplist = ""
@@ -300,7 +300,7 @@ newgui game [
 					guiradio "deathmatch"					modeselected 4
 					guiradio "secure-the-flag"				modeselected 5
 					guiradio "capture-the-flag"				modeselected 6
-					guiradio "race"							modeselected 7S
+					guiradio "time-trial"					modeselected 7
 					if (>= $modeselected 3) [
 						guistrut 1
 						guititle "mutators"
@@ -477,7 +477,7 @@ newgui game [
 					vardef wavepusharea			"wave push area"
 					vardef wavepushscale		"wave push scale"
 					vardef timelimit			"time limit"
-					vardef racelimit			"race limit"
+					vardef triallimit			"time-trial limit"
 					vardef intermlimit			"intermission"
 					vardef votelimit			"vote limit"
 					vardef itemspawntime		"item spawn time"
@@ -488,7 +488,7 @@ newgui game [
 					vardef spawnprotecttime		"spawn protect"
 					vardef spawndelay			"spawn delay"
 					vardef instaspawndelay		"insta spawn delay"
-					vardef racespawndelay		"race spawn delay"
+					vardef trialspawndelay		"time-trial spawn delay"
 				]
 				guistrut 1
 				guilist [
@@ -506,7 +506,7 @@ newgui game [
 					varfld wavepusharea 16
 					varfld wavepushscale 16
 					varfld timelimit 16
-					varfld racelimit 16
+					varfld triallimit 16
 					varfld intermlimit 16
 					varfld votelimit 16
 					varfld itemspawntime 16
@@ -517,7 +517,7 @@ newgui game [
 					varfld spawnprotecttime 16
 					varfld spawndelay 16
 					varfld instaspawndelay 16
-					varfld racespawndelay 16
+					varfld trialspawndelay 16
 				]
 			]
 			guistayopen [ guibutton "^foreset all game variables" [resetvars] "exit" ]
