reduce shotgun projectile lifetimes, fixed impulse physics bugs, aiclip'd flag areas in enigma, fixed physics in tranquility and nova
Former-commit-id: d1534e73a33be1ab12cd459f0b9a420c9229c8b6

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -410,9 +410,10 @@ newgui game [
 					vardef kamikaze				"kamikaze"
 					vardef fraglimit			"frag limit"
 					vardef ctflimit				"ctf score limit"
-					vardef ctfstyle				"ctf score limit"
+					vardef ctfstyle				"ctf style"
 					vardef ctfresetdelay		"ctf reset delay"
 					vardef stflimit				"stf score limit"
+					vardef stfstyle				"stf style"
 					vardef stffinish			"stf all finish"
 					vardef stfpoints			"stf points"
 					vardef stfoccupy			"stf occupy"
@@ -444,6 +445,7 @@ newgui game [
 					varfld ctfstyle 16
 					varfld ctfresetdelay 16
 					varfld stflimit 16
+					varfld stfstyle 16
 					varfld stffinish 16
 					varfld stfpoints 16
 					varfld stfoccupy 16
