--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -39,8 +38,8 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsespeed 40.0
-// jumpspeed 65.0
+// impulsespeed 50.0
+// jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
@@ -59,7 +58,8 @@
 // maptitle "Nova"
 // mmshadows 2
 // mmskylight 1
-// movespeed 40.0
+// movecrawl 0.5
+// movespeed 50.0
 // numplayers 10
 // obitdeath ""
 // obitwater ""
