--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -60,7 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 8
+numplayers 6
 // obitdeath ""
 // obitwater ""
 // refractfog 1
