slight game variable revisions, fixed bugs in; hud, duel/ai management, and impulse skating
Former-commit-id: fb09e8232a66791c2bb8988b584fd9ff6992001d

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -323,15 +323,13 @@ newgui game [
 			guistrut 1
 			guilist [
 				guilist [
-					vardef botbalance		"bot balancing"
-					vardef botscale			"scale num bots"
+					vardef botbalance		"bot balance"
 					vardef botminskill		"bot min skill level"
 					vardef botmaxskill		"bot max skill level"
 				]
 				guistrut 1
 				guilist [
 					varfld botbalance 12
-					varfld botscale 12
 					varfld botminskill 12
 					varfld botmaxskill 12
 				]
